--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">RendBank</a></li>
+                <li><a class="dropdown-item" href="rendbank/index.html">RendBank</a></li>
               </ul>
             </li>
           </ul>
